force-app/main/default/objects/TrueCost_Case__c/TrueCost_Case__c.object-meta.xml
<CustomObject>
    <description>Like a case, only free</description>
    <label>TC Case</label>
    <nameField>
        <displayFormat>Case-{0000000}</displayFormat>
        <label>Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TC Cases</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>