force-app/main/default/objects/TrueCost_Case__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>TrueCost account for this case.</description>
    <inlineHelpText>TrueCost account for this case.</inlineHelpText>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TC Cases</relationshipLabel>
    <relationshipName>TrueCost_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>