force-app/main/default/objects/TrueCost_Case__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>For the TrueCost Refer-A-Friend Program</description>
    <inlineHelpText>Used to verify whether the premise exists in Salesforce</inlineHelpText>
    <label>Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>