force-app/main/default/objects/TrueCost_Case__c/fields/Appointment_Time__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Time__c</fullName>
    <description>When the customer wants to talk to TrueCost</description>
    <inlineHelpText>When the customer wants to talk to TrueCost</inlineHelpText>
    <label>Appointment Time</label>
    <type>DateTime</type>
</CustomField>