force-app/main/default/objects/TrueCost_Case__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What user will complete this request?</description>
    <inlineHelpText>What user will complete this request?</inlineHelpText>
    <label>Assigned To</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2) AND (3 AND 4)</booleanFilter>
        <errorMessage>Assigned user must be a project management or business technology user.</errorMessage>
        <filterItems>
            <field>User.Profile.Id</field>
            <operation>equals</operation>
            <value>00e30000001gLF2</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Id</field>
            <operation>equals</operation>
            <value>00e300000028iY3</value>
        </filterItems>
        <filterItems>
            <field>User.LastName</field>
            <operation>notEqual</operation>
            <value>Donovan</value>
        </filterItems>
        <filterItems>
            <field>User.LastName</field>
            <operation>notContain</operation>
            <value>Admin</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>TC_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>