force-app/main/default/objects/TrueCost_Case__c/fields/Business_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Business_Purpose__c</fullName>
    <description>what is the purpose or need that this request is addressing?</description>
    <inlineHelpText>what is the purpose or need that this request is addressing?</inlineHelpText>
    <label>Business Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>