force-app/main/default/objects/TrueCost_Case__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Choice</fullName>
            </value>
            <value>
                <fullName>Producer Services</fullName>
            </value>
            <value>
                <fullName>Retail C&amp;I</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
            <value>
                <fullName>MES</fullName>
            </value>
            <value>
                <fullName>Various</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>