force-app/main/default/objects/TrueCost_Case__c/fields/Caller_Name__c.field-meta.xml
<CustomField>
    <fullName>Caller_Name__c</fullName>
    <description>Put the name of the person calling</description>
    <inlineHelpText>Put the name of the person calling</inlineHelpText>
    <label>Caller&#39;s Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>