force-app/main/default/objects/TrueCost_Case__c/fields/ConfidenceResolved__c.field-meta.xml
<CustomField>
    <fullName>ConfidenceResolved__c</fullName>
    <description>How would you rate your level of confidence that your issue has been resolved?
[On a scale of 1 to 5 with 1 indicating that you are not at all confident and 5 indicating completely confident]</description>
    <inlineHelpText>How would you rate your level of confidence that your issue has been resolved?
[On a scale of 1 to 5 with 1 indicating that you are not at all confident and 5 indicating completely confident]</inlineHelpText>
    <label>ConfidenceResolved?</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>