force-app/main/default/objects/TrueCost_Case__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>for consultant cases</description>
    <inlineHelpText>for consultant cases</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TC Cases</relationshipLabel>
    <relationshipName>TC_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>