force-app/main/default/objects/TrueCost_Case__c/fields/Current_CES_Customer__c.field-meta.xml
<CustomField>
    <fullName>Current_CES_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current CES Customer</label>
    <type>Checkbox</type>
</CustomField>