force-app/main/default/objects/TrueCost_Case__c/fields/Current_REP__c.field-meta.xml
<CustomField>
    <fullName>Current_REP__c</fullName>
    <label>Current REP</label>
    <length>30</length>
    <type>Text</type>
</CustomField>