force-app/main/default/objects/TrueCost_Case__c/fields/Current_Workaround__c.field-meta.xml
<CustomField>
    <fullName>Current_Workaround__c</fullName>
    <description>how is this need currently being accommodated?</description>
    <inlineHelpText>how is this need currently being accommodated?</inlineHelpText>
    <label>Current Workaround</label>
    <length>255</length>
    <type>Text</type>
</CustomField>