force-app/main/default/objects/TrueCost_Case__c/fields/Date_Time_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Closed__c</fullName>
    <description>When the case is closed</description>
    <inlineHelpText>When the case is closed</inlineHelpText>
    <label>Date/Time Closed</label>
    <type>DateTime</type>
</CustomField>