force-app/main/default/objects/TrueCost_Case__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>How the customer describes the case</description>
    <inlineHelpText>How the customer describes the case</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>