force-app/main/default/objects/TrueCost_Case__c/fields/Do_Not_Call_Contact__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the customer/account does NOT want to receive a phone call or any kind of communication.</description>
    <inlineHelpText>Check this box if the customer/account does NOT want to receive a phone call or any kind of communication.</inlineHelpText>
    <label>Do Not Call/Contact</label>
    <type>Checkbox</type>
</CustomField>