force-app/main/default/objects/TrueCost_Case__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>How long has this case been open? (minutes)</description>
    <formula>if(
   ispickval(Status__c, &quot;Closed&quot;), 
   (Date_Time_Closed__c  -  CreatedDate)*24*60,
   if( 
      or(
         ispickval(Status__c, &quot;Waiting for Customer Response&quot;),
         ispickval(Status__c, &quot;Escalated&quot;)
      ), 
      (First_email_response__c - CreatedDate)*24*60,
      (Now()-CreatedDate)*24*60
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How long has this case been open? (minutes)</inlineHelpText>
    <label>Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>