force-app/main/default/objects/TrueCost_Case__c/fields/Effort__c.field-meta.xml
<CustomField>
    <fullName>Effort__c</fullName>
    <description>How much effort did you personally have to put forth toward handling your issue today?
[On a scale of 1 to 5 with 1 indicating very high effort and 5 indicating very little effort was needed]</description>
    <inlineHelpText>How much effort did you personally have to put forth toward handling your issue today?
[On a scale of 1 to 5 with 1 indicating very high effort and 5 indicating very little effort was needed]</inlineHelpText>
    <label>Effort</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>