force-app/main/default/objects/TrueCost_Case__c/fields/Email_Alert_Header_Text__c.field-meta.xml
<CustomField>
    <fullName>Email_Alert_Header_Text__c</fullName>
    <formula>CASE(TEXT(Status__c), 
  &quot;New&quot;, &quot;A new technology case has been submitted.&quot; &amp; BR() &amp; &quot;Please approve for work or reject.&quot;, 
  &quot;Assigned&quot;, &quot;A new technology case has been assigned to you.&quot; &amp; BR() &amp; &quot;Please begin work on this case and document case status changes.&quot;,
  &quot;&quot;)</formula>
    <label>Email Alert Header Text</label>
    <type>Text</type>
</CustomField>