force-app/main/default/objects/TrueCost_Case__c/fields/Email_Unsubscribe__c.field-meta.xml
<CustomField>
    <fullName>Email_Unsubscribe__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the customer/account does NOT want to receive email communication.</description>
    <inlineHelpText>Check this box if the customer/account does NOT want to receive email communication.</inlineHelpText>
    <label>Email Unsubscribe</label>
    <type>Checkbox</type>
</CustomField>