force-app/main/default/objects/TrueCost_Case__c/fields/Existing_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Existing_Solutions__c</fullName>
    <description>list of existing solutions from other business units</description>
    <inlineHelpText>list of existing solutions from other business units</inlineHelpText>
    <label>Existing Solutions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>