force-app/main/default/objects/TrueCost_Case__c/fields/FAQ_Suggestion__c.field-meta.xml
<CustomField>
    <fullName>FAQ_Suggestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FAQ Suggestion</label>
    <referenceTo>FAQ__c</referenceTo>
    <relationshipName>TrueCost_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>