force-app/main/default/objects/TrueCost_Case__c/fields/First_email_response__c.field-meta.xml
<CustomField>
    <fullName>First_email_response__c</fullName>
    <description>When the agent moved the case to waiting for customer response.</description>
    <inlineHelpText>When the agent moved the case to waiting for customer response.</inlineHelpText>
    <label>First email response</label>
    <type>DateTime</type>
</CustomField>