force-app/main/default/objects/TrueCost_Case__c/fields/Helpfulness__c.field-meta.xml
<CustomField>
    <fullName>Helpfulness__c</fullName>
    <description>How would you rate the helpfulness of the Customer Service Representative who handled your request?
[On a scale of 1 to 5 with 1 indicating not at all helpful and 5 indicating very helpful]</description>
    <inlineHelpText>How would you rate the helpfulness of the Customer Service Representative who handled your request?
[On a scale of 1 to 5 with 1 indicating not at all helpful and 5 indicating very helpful]</inlineHelpText>
    <label>Helpfulness</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>