force-app/main/default/objects/TrueCost_Case__c/fields/Internal_Comment_Date__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comment_Date__c</fullName>
    <description>When the most recent internal comment was added</description>
    <label>Internal Comment Date</label>
    <type>DateTime</type>
</CustomField>