force-app/main/default/objects/TrueCost_Case__c/fields/Internal_Comment_User__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comment_User__c</fullName>
    <description>Which user made the most recent internal comment</description>
    <inlineHelpText>Which user made the most recent internal comment</inlineHelpText>
    <label>Internal Comment User</label>
    <length>50</length>
    <type>Text</type>
</CustomField>