force-app/main/default/objects/TrueCost_Case__c/fields/Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comments__c</fullName>
    <inlineHelpText>Enter any special notes about the case that others in customer service need to be able to see.</inlineHelpText>
    <label>Internal Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>