force-app/main/default/objects/TrueCost_Case__c/fields/Is_CES_Standard_Solution__c.field-meta.xml
<CustomField>
    <fullName>Is_CES_Standard_Solution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will this solution be the standard for all CES business units?</description>
    <inlineHelpText>Will this solution be the standard for all CES business units?</inlineHelpText>
    <label>Is CES Standard Solution</label>
    <type>Checkbox</type>
</CustomField>