force-app/main/default/objects/TrueCost_Case__c/fields/isEscalated__c.field-meta.xml
<CustomField>
    <fullName>isEscalated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalated</label>
    <type>Checkbox</type>
</CustomField>