force-app/main/default/objects/TrueCost_Case__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What lead is this case associated with?</description>
    <inlineHelpText>What lead is this case associated with?</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>TrueCost_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>