force-app/main/default/objects/TrueCost_Case__c/fields/Non_Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Non_Account_Email__c</fullName>
    <inlineHelpText>Email of people who don&#39;t have an account already</inlineHelpText>
    <label>Non-Account Email</label>
    <type>Email</type>
</CustomField>