force-app/main/default/objects/TrueCost_Case__c/fields/Non_Account_Phone__c.field-meta.xml
<CustomField>
    <fullName>Non_Account_Phone__c</fullName>
    <inlineHelpText>Phone of the person who doesn&#39;t have an account already</inlineHelpText>
    <label>Non-Account Phone</label>
    <type>Phone</type>
</CustomField>