force-app/main/default/objects/TrueCost_Case__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Order that the case is related to</description>
    <inlineHelpText>If the customer is calling about an order, click the search button to find it</inlineHelpText>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipName>TrueCost_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>