force-app/main/default/objects/TrueCost_Case__c/fields/Order_Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Order_Failure_Reason__c</fullName>
    <description>Why did the switch order fail?</description>
    <inlineHelpText>Why did the switch order fail?</inlineHelpText>
    <label>Order Failure Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>