force-app/main/default/objects/TrueCost_Case__c/fields/Permission_to_use_comments_in_marketing__c.field-meta.xml
<CustomField>
    <fullName>Permission_to_use_comments_in_marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The customer has given us permission to use their comments</description>
    <inlineHelpText>The customer has given us permission to use their comments</inlineHelpText>
    <label>Permission to use comments in marketing</label>
    <type>Checkbox</type>
</CustomField>