force-app/main/default/objects/TrueCost_Case__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Is this request associated with a larger scale initiative or project?</description>
    <inlineHelpText>Is this request associated with a larger scale initiative or project?</inlineHelpText>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Business Technology Requests</relationshipLabel>
    <relationshipName>TC_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>