force-app/main/default/objects/TrueCost_Case__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <inlineHelpText>Given the type of case, what reason is the case?</inlineHelpText>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Address Not Found</fullName>
            </value>
            <value>
                <fullName>Comments/Feedback</fullName>
            </value>
            <value>
                <fullName>Commercial Service</fullName>
            </value>
            <value>
                <fullName>Complex functionality</fullName>
            </value>
            <value>
                <fullName>ERCOT alert</fullName>
            </value>
            <value>
                <fullName>ESID lookup</fullName>
            </value>
            <value>
                <fullName>Existing problem</fullName>
            </value>
            <value>
                <fullName>Format</fullName>
            </value>
            <value>
                <fullName>Instructions not clear</fullName>
            </value>
            <value>
                <fullName>Market question</fullName>
            </value>
            <value>
                <fullName>New problem</fullName>
            </value>
            <value>
                <fullName>No Meter</fullName>
            </value>
            <value>
                <fullName>Order Failure</fullName>
            </value>
            <value>
                <fullName>Order status</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Questions about an REP</fullName>
            </value>
            <value>
                <fullName>Questions about a Plan</fullName>
            </value>
            <value>
                <fullName>Suggestion</fullName>
            </value>
            <value>
                <fullName>Technical - Browser assistance</fullName>
            </value>
            <value>
                <fullName>Technical - Complex functionality</fullName>
            </value>
            <value>
                <fullName>Technical - Navigation</fullName>
            </value>
            <value>
                <fullName>Technical - Password reset</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>User didn&#39;t attend training</fullName>
            </value>
            <value>
                <fullName>TDSP Fees</fullName>
            </value>
            <value>
                <fullName>Account termination</fullName>
            </value>
            <value>
                <fullName>Meter number</fullName>
            </value>
            <value>
                <fullName>REP order performance</fullName>
            </value>
            <value>
                <fullName>Page errors</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>