force-app/main/default/objects/TrueCost_Case__c/fields/Referring_Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Referring_Agent_ID__c</fullName>
    <label>Referring Agent ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>