force-app/main/default/objects/TrueCost_Case__c/fields/REP_for_Switch__c.field-meta.xml
<CustomField>
    <fullName>REP_for_Switch__c</fullName>
    <description>What REP is the customer placing an order with?</description>
    <inlineHelpText>What REP is the customer placing an order with?</inlineHelpText>
    <label>REP for Switch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>