force-app/main/default/objects/TrueCost_Case__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <description>Who is requesting this task or project?</description>
    <inlineHelpText>Who is requesting this task or project?</inlineHelpText>
    <label>Requested By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>