force-app/main/default/objects/TrueCost_Case__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Quick subject for the case</description>
    <inlineHelpText>If this case is from web or email, then this is the subject line</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>