force-app/main/default/objects/TrueCost_Case__c/fields/SurveyQuestion1__c.field-meta.xml
<CustomField>
    <fullName>SurveyQuestion1__c</fullName>
    <description>Overall Satisfaction</description>
    <inlineHelpText>Overall Satisfaction</inlineHelpText>
    <label>Overall Satisfaction</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>