force-app/main/default/objects/TrueCost_Case__c/fields/SurveyQuestion2__c.field-meta.xml
<CustomField>
    <fullName>SurveyQuestion2__c</fullName>
    <description>Was this the first contact you have had with TrueCost about this issue?</description>
    <inlineHelpText>Was this the first contact you have had with TrueCost about this issue?</inlineHelpText>
    <label>SurveyQuestionFirstContact</label>
    <length>5</length>
    <type>Text</type>
</CustomField>