force-app/main/default/objects/TrueCost_Case__c/fields/System_Environment__c.field-meta.xml
<CustomField>
    <fullName>System_Environment__c</fullName>
    <description>what system environment is this case related to?</description>
    <inlineHelpText>what system environment is this case related to?</inlineHelpText>
    <label>System Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Safari</fullName>
            </value>
            <value>
                <fullName>Informatica</fullName>
            </value>
            <value>
                <fullName>Gemini</fullName>
            </value>
            <value>
                <fullName>CMS/CCOM</fullName>
            </value>
            <value>
                <fullName>Various</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>