force-app/main/default/objects/TrueCost_Case__c/fields/TC_Refer_a_Friend_Program__c.field-meta.xml
<CustomField>
    <fullName>TC_Refer_a_Friend_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The customer wants to participate in the TrueCost referral program.</description>
    <inlineHelpText>The customer wants to participate in the TrueCost referral program</inlineHelpText>
    <label>TC Refer a Friend Program</label>
    <type>Checkbox</type>
</CustomField>