force-app/main/default/objects/TrueCost_Case__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>What general category of case is this?</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Problem</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Comments/Feedback</fullName>
            </value>
            <value>
                <fullName>Out of Office Reply</fullName>
            </value>
            <value>
                <fullName>Outside of Service Territory (TNMP)</fullName>
            </value>
            <value>
                <fullName>Password Related</fullName>
            </value>
            <value>
                <fullName>Address Matching</fullName>
            </value>
            <value>
                <fullName>Not Actionable (No Survey)</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Outside of Service Territory (Entergy)</fullName>
            </value>
            <value>
                <fullName>Outside of Service Territory (AEP)</fullName>
            </value>
            <value>
                <fullName>Outside of Service Territory (Oncor)</fullName>
            </value>
            <value>
                <fullName>Clawback</fullName>
            </value>
            <value>
                <fullName>Inadvertent Switch</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>TrueCost Invoice</fullName>
            </value>
            <value>
                <fullName>Order API Error</fullName>
            </value>
            <value>
                <fullName>Gas Choice File</fullName>
            </value>
            <value>
                <fullName>Utility</fullName>
            </value>
            <value>
                <fullName>API Error</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Enhancement</fullName>
            </value>
            <value>
                <fullName>Bug/Fix</fullName>
            </value>
            <value>
                <fullName>CMS/CCOM Request</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>