force-app/main/default/objects/TrueCost_Case__c/fields/Wants_Contact__c.field-meta.xml
<CustomField>
    <fullName>Wants_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The customer wants us to contact him/her about this case</description>
    <inlineHelpText>Only applies to cases from the web form.</inlineHelpText>
    <label>Wants Contact</label>
    <type>Checkbox</type>
</CustomField>