force-app/main/default/objects/TrueCost_Case__c/recordTypes/CES_Customer_Case.recordType-meta.xml
<RecordType>
    <fullName>CES_Customer_Case</fullName>
    <active>true</active>
    <label>CES Customer Case</label>
</RecordType>