force-app/main/default/objects/TrueCost_Case__c/recordTypes/CES_Technology_Request.recordType-meta.xml
<RecordType>
    <fullName>CES_Technology_Request</fullName>
    <active>true</active>
    <description>CES systems and data requests</description>
    <label>CES Technology Request</label>
</RecordType>